# basic_protothreads_LVGL

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json
docs/: README.md
docs/stages/: 01_minimum_system.md  02_uart_printf.md  03_fsmc_lcd.md  04_lvgl_hello.md  05_boot_animation_pt.md
docs/superpowers/plans/: 2026-04-18-stage3-fsmc-lcd-implementation.md
docs/superpowers/specs/: 2026-04-18-stage3-fsmc-lcd-design.md
project/main/: CMakeLists.txt  STM32F407ZGTx_FLASH.ld
project/main/App/Inc/: app_stage.h  lv_conf.h  stage4_lvgl.h  stage5_boot_pt.h
project/main/App/Src/: app_stage.c  stage4_lvgl.c  stage5_boot_pt.c
project/main/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
project/main/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
project/main/Drivers/Inc/: board_uart.h  fsmc_lcd.h
project/main/Drivers/Src/: board_uart.c  fsmc_lcd.c
resources/hal/: startup_stm32f407xx.s
tools/: cmake-toolchain.cmake  openocd-stlink.cfg
